--- a/quick-llm/privacyPolicy/index.html
+++ b/quick-llm/privacyPolicy/index.html
@@ -6,7 +6,7 @@
   <title>Privacy Policy - Quick LLM</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
       max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
@@ -15,14 +15,49 @@
     }
     h1 {
       color: #4f46e5;
+      font-size: 2em;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      color: #222;
+      font-size: 1.25em;
+      margin-top: 1.5em;
+    }
+    p {
+      margin-top: 0.5em;
+    }
+    .date {
+      font-style: italic;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Quick LLM</strong> does not collect or store any personal data.</p>
-  <p>All data is processed locally or via the LLM API endpoint that you provide. We do not track, save, or transmit any information about your usage.</p>
-  <p>This extension was built with privacy in mind.</p>
-  <p>If you have questions, contact us at: your-email@example.com</p>
+  <p class="date">Effective Date: July 24, 2025</p>
+
+  <h2>1. Introduction</h2>
+  <p>This privacy policy outlines how Quick LLM collects, uses, maintains, and discloses information collected from users.</p>
+
+  <h2>2. Non-personal Identification Information</h2>
+  <p>We may collect non-personal identification information about Users whenever they interact with our Extension. This may include technical information about the user's device and browser but does not include personal data.</p>
+
+  <h2>3. How We Use Collected Information</h2>
+  <p>The Quick LLM uses information solely for the functionality of the extension, such as remembering user settings and preferences.</p>
+
+  <h2>4. How We Protect Your Information</h2>
+  <p>We adopt appropriate data collection, storage, and processing practices to protect against unauthorized access, alteration, disclosure, or destruction of your information.</p>
+
+  <h2>5. Sharing Your Personal Information</h2>
+  <p>We do not sell, trade, or rent users' personal identification information to others.</p>
+
+  <h2>6. Changes to This Privacy Policy</h2>
+  <p>Quick LLM has the discretion to update this privacy policy at any time. Users are encouraged to frequently check this policy for any changes.</p>
+
+  <h2>7. Your Acceptance of These Terms</h2>
+  <p>By using this Extension, you signify your acceptance of this policy. If you do not agree, please do not use our Extension.</p>
+
+  <h2>8. Contacting Us</h2>
+  <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:htostes99@gmail.com">htostes99@gmail.com</a></p>
 </body>
 </html>
