--- a/quick-llm/privacyPolicy/index.html
+++ b/quick-llm/privacyPolicy/index.html
@@ -59,5 +59,13 @@
 
   <h2>8. Contacting Us</h2>
   <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:htostes99@gmail.com">htostes99@gmail.com</a></p>
+
+  <hr style="margin-top: 40px; border: none; border-top: 1px solid #ccc;" />
+  <footer style="text-align: center; margin-top: 20px; font-size: 0.9em; color: #666;">
+    <p>
+      <a href="/quick-llm/privacyPolicy/" style="color: #4f46e5; text-decoration: none;">Privacy Policy</a> |
+      <a href="/quick-llm/termsOfUse/" style="color: #4f46e5; text-decoration: none;">Terms of Use</a>
+    </p>
+  </footer>
 </body>
 </html>
