--- a/quick-llm/termsOfUse/index.html
+++ b/quick-llm/termsOfUse/index.html
@@ -48,7 +48,7 @@
   </ul>
 
   <h2>2. Privacy</h2>
-  <p>This Extension does not collect, store, or share any personal information. All data processed by the Extension remains on your local device and is never transmitted to any external servers. For more details, please refer to our <a href="/privacyPolicy/">Privacy Policy</a>.</p>
+  <p>This Extension does not collect, store, or share any personal information. All data processed by the Extension remains on your local device and is never transmitted to any external servers. For more details, please refer to our <a href="/quick-llm/privacyPolicy/">Privacy Policy</a>.</p>
 
   <h2>3. Updates</h2>
   <p>We may release updates to improve the Extension, fix bugs, or add new features. By continuing to use the Extension after an update, you agree to the updated version and these Terms.</p>
@@ -69,5 +69,13 @@
   <p>If you have any questions or concerns about these Terms, please contact us at: <a href="mailto:htostes99@gmail.com">htostes99@gmail.com</a>.</p>
 
   <p>Thank you for using Quick LLM!</p>
+
+  <hr style="margin-top: 40px; border: none; border-top: 1px solid #ccc;" />
+  <footer style="text-align: center; margin-top: 20px; font-size: 0.9em; color: #666;">
+    <p>
+      <a href="/quick-llm/privacyPolicy/" style="color: #4f46e5; text-decoration: none;">Privacy Policy</a> |
+      <a href="/quick-llm/termsOfUse/" style="color: #4f46e5; text-decoration: none;">Terms of Use</a>
+    </p>
+  </footer>
 </body>
 </html>
