--- a/quick-llm/privacyPolicy/index.html
+++ b/quick-llm/privacyPolicy/index.html
@@ -12,6 +12,7 @@
       padding: 0 20px;
       line-height: 1.6;
       color: #333;
+      background-color: rgb(245, 245, 245);
     }
     h1 {
       color: #4f46e5;
