feat: add about

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Henrique Tostes</title>
+  <title>About - Henrique Tostes</title>
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
@@ -12,14 +12,15 @@
 
     <main class="container">
       <section class="hero">
-        <h1>Hi, I'm Henrique 👋</h1>
+        <h1>About This Project</h1>
         <p>
-          I'm a developer passionate about building tools, open source, and helping others through automation, AI, and good design.
+          This entire website was born from a single prompt to ChatGPT. I asked it to create a personal website, and this is the result. It's a testament to the power of AI in web development and a fun experiment to see what's possible.
         </p>
-        <div class="buttons">
-          <a href="/about/" class="btn primary">Learn More</a>
-          <a href="/contact/" class="btn secondary">Get in Touch</a>
-        </div>
+      </section>
+
+      <section class="timeline-section">
+        <h2>My Work Experience</h2>
+        <div class="timeline" id="timeline-container"></div>
       </section>
     </main>
 
