--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         >Articles</a
                     >
                 </div>
-                <div class="cards" id="projects-grid"></div>
+                <div class="cards one-column" id="projects-grid"></div>
                 <div
                     class="cards one-column"
                     id="articles-grid"
