feat: change photo and add glow

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     <body>
         <div class="main fade-in">
             <aside class="sidebar">
-                <img src="assets/me.png" alt="Minha Foto" class="avatar" />
+                <img
+                    src="assets/me.png"
+                    alt="Minha Foto"
+                    class="avatar glass-avatar"
+                />
                 <h1>Henrique Tostes</h1>
                 <p class="tagline">
                     I'm a Machine learning engineer, Software engineer, and
