--- a/be/index.html
+++ b/be/index.html
@@ -395,7 +395,7 @@
                     document.getElementById("lock-screen").style.display =
                         "none";
                     loadImages();
-                    // startSparkles();
+                    startSparkles();
                     playMusic();
                 } else {
                     error.textContent = "Senha incorreta 💔";
